# plutus-trace

./: .gitmodules  plutus-trace.cabal  shell.nix
app/: Crowdfunding.hs  Game.hs  Main.hs  Notary.hs  Simple.hs  Trace.hs
app/Crowdfunding/: Trace.hs
app/Game/: Trace.hs
app/Notary/: Trace.hs
app/Simple/: Trace.hs
