cabal-version:       >=1.10

name:                plutus-trace
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Brian W Bush
maintainer:          code@functionally.io
build-type:          Simple

executable example-mine
  main-is:             Main.hs
  other-modules:       Game
                       Game.Trace
                       Trace
  build-depends:       base >=4.14 && <4.15
               ,       aeson
               ,       bytestring
               ,       containers
               ,       freer-simple
               ,       plutus-contract
               ,       plutus-ledger
               ,       plutus-tx
               ,       plutus-tx-plugin
               ,       prettyprinter
               ,       row-types
  hs-source-dirs:      app
  default-language:    Haskell2010
